--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,8 +5,6 @@
 }
 body{margin: 0;}
 
-
-
 $txt-color: #fff;
 
 h1{
@@ -15,3 +13,10 @@ h1{
 	border-bottom: 4px solid $txt-color;
 }
 
+.evil_councilor {
+		background-color: darkgreen;
+		display: inline-block;
+		padding: 5px;
+		margin: 10px;
+		width: 30%;
+}
